--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "cheerio": "^1.0.0-rc.3",
     "dotenv": "^8.2.0",
     "jimp": "^0.9.3",
+    "puppeteer": "^2.1.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
@@ -44,6 +45,7 @@
     "@types/jest": "^24.0.25",
     "@types/jimp": "^0.2.28",
     "@types/node": "^13.1.6",
+    "@types/puppeteer": "^2.0.0",
     "@types/supertest": "^2.0.8",
     "@types/twit": "^2.2.23",
     "@typescript-eslint/eslint-plugin": "^2.12.0",
